--- a/css/style.css
+++ b/css/style.css
@@ -192,23 +192,6 @@ height: 80px;
     justify-self: flex-end;    
 }
 
-/* .showcase-form .form-control {
-    margin: 30px 0; 
-} */
-
-/* .showcase-form input[type='text'],
-.showcase-form input[type='email'] {
-    border:  0;
-    border-bottom:  1px solid #b4becb;
-    width: 100%;
-    padding: 3px;
-    font-size: 16px;
-     
-}
-
-.showcase-form input:focus {
-    outline: none;
-} */
 
 .showcase::before, 
 .showcase::after {
@@ -226,6 +209,31 @@ height: 80px;
     -ms-transform: skewY(-2deg); */
 }
 
+.showcase-puppy {
+    background-color: var(--light-complementary-color);
+    height: 200px;
+    color: black;
+    position: relative;
+}
+.showcase-puppy h1 {
+    font-size: 40px;   
+}
+
+.showcase-puppy-text {
+    animation: slideInFromLeft 1s ease-in;
+}
+
+.showcase-puppy::before, 
+.showcase-puppy::after {
+    content: ''; 
+    /* to use these pseudo classes, req this property, but leaving blank */
+    position: absolute;
+    height: 50px;
+    bottom: -40px;
+    right: 0;
+    left: 0;
+    background: var(--light-color);
+}
 /* cli */
 
 .cli {
