Embed utube vid to stud pg

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -14,6 +14,11 @@
     margin: 10px;
 }
 
+.video {
+    aspect-ratio: 16 / 9;
+    width: 100%;
+  }
+
 .btn {
     display: inline-block;
     padding: 10px 30px;
