--- a/css/style.css
+++ b/css/style.css
@@ -62,10 +62,12 @@ img.animated-gif{
 
 header {
     position: sticky;
-    /* width: 100%;
     top: 0;
+    z-index: 100;
+    /* width: 100%;
+    
     left: 0;
-    z-index: 100; */
+     */
 }
 
 /* Navbar */
@@ -162,6 +164,11 @@ height: 80px;
 .showtime-text {
     z-index: 10;
     animation: slideInFromTop 1s ease-in;
+    
+}
+
+.showtime-text h1 {
+    font-weight: bolder;
 }
 
 /* Showcase */
@@ -340,6 +347,13 @@ height: 80px;
   text-align: center;
 }
 
+
+/* Stud */
+
+/* #romeo {
+    position: sticky;
+    top: 118px;
+} */
 /* Docs */
 .docs-main {
     background-color: var(--light-complementary-color);
