--- a/css/style.css
+++ b/css/style.css
@@ -173,9 +173,10 @@ height: 80px;
 /* Showcase */
 .showcase {
     background-color: var(--light-complementary-color);
-    height: 400px;
+    /* height: 450px; */
     color: black;
     position: relative;
+    padding-top: 20px;
 }
 .showcase h1 {
     font-size: 40px;   
@@ -189,8 +190,11 @@ height: 80px;
     grid-template-columns: 55% 45%;
     gap: 30px;
     overflow: visible;
-    justify-items: center;
+    justify-items: center; 
     margin-bottom: 40px;
+}
+.showcase img{
+    
 }
 
 .showcase-text {
@@ -214,22 +218,17 @@ height: 80px;
 
 
 
-
+/* 
 #indexintro::before, 
 #indexintro::after {
     content: ''; 
-    /* to use these pseudo classes, req this property, but leaving blank */
     position: absolute;
     height: 100px;
     bottom: -90px;
     right: 0;
     left: 0;
     background: var(--light-color);
-    /* transform: skewY(-2deg);
-    -webkit-transform: skewY(-2deg);
-    -moz-transform: skewY(-2deg);
-    -ms-transform: skewY(-2deg); */
-}
+} */
 
 .showcase-puppy {
     background-color: var(--light-complementary-color);
@@ -245,22 +244,23 @@ height: 80px;
     animation: slideInFromLeft 1s ease-in;
 }
 
-.showcase-puppy::before, 
+/* .showcase-puppy::before, 
 .showcase-puppy::after {
     content: ''; 
-    /* to use these pseudo classes, req this property, but leaving blank */
     position: absolute;
     height: 50px;
     bottom: -40px;
     right: 0;
     left: 0;
     background: var(--light-color);
-}
+} */
+
 /* cli */
 
 .cli {
     background: var(--primary-color);
-    padding-top: 120px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     color: whitesmoke;
 }
 .cli .grid {
@@ -277,7 +277,6 @@ height: 80px;
 /* Cloud */
 
 .cloud {
-    background: var(--secondary-color);
 }
 
 .cloud .grid {
